[gd_scene load_steps=4 format=3 uid="uid://ce4v6087lyga5"]

[ext_resource type="PackedScene" uid="uid://bgd0xc7kvr0ou" path="res://models/player.glb" id="1_n6lr1"]
[ext_resource type="Script" path="res://scenes/player_visuals.gd" id="2_pu3n2"]
[ext_resource type="PackedScene" uid="uid://vo11ijbtt3xo" path="res://scenes/gun.tscn" id="3_865bm"]

[node name="player" instance=ExtResource("1_n6lr1")]
script = ExtResource("2_pu3n2")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(1.05855, -1.69426, -71.6048)
bones/0/rotation = Quaternion(-0.728991, -0.0499507, 0.01517, 0.682529)
bones/1/rotation = Quaternion(0.0402632, 0.0131347, 0.0180945, 0.998939)
bones/2/rotation = Quaternion(0.0146999, 0.0032566, 0.0136116, 0.999794)
bones/3/rotation = Quaternion(0.0164647, 0.00362482, 0.0136155, 0.999765)
bones/4/rotation = Quaternion(0.0272255, -0.000882347, 0.00410986, 0.99962)
bones/5/rotation = Quaternion(-0.06605, 0.0118063, -0.00147135, 0.997745)
bones/8/rotation = Quaternion(0.640643, 0.395662, -0.497344, 0.430902)
bones/9/position = Vector3(-1.42361e-06, 23.1298, -1.98795e-06)
bones/9/rotation = Quaternion(0.522759, 0.167904, 0.152987, 0.82166)
bones/10/rotation = Quaternion(-0.00121364, -0.0626359, 0.00861504, 0.997998)
bones/11/position = Vector3(3.71745e-06, 23.9657, 7.18127e-06)
bones/11/rotation = Quaternion(0.0507627, -0.213689, 0.0294913, 0.975136)
bones/12/rotation = Quaternion(0.0656806, 0.0101197, 0.0119077, 0.997718)
bones/13/rotation = Quaternion(0.140297, 0.000239681, -0.00717931, 0.990083)
bones/14/rotation = Quaternion(0.073795, -0.0201487, 0.214547, 0.973713)
bones/15/position = Vector3(1.1121, 2.37571, 0.028607)
bones/18/rotation = Quaternion(0.669322, -0.417626, 0.477795, 0.386404)
bones/19/rotation = Quaternion(0.426615, -0.218872, -0.227996, 0.847415)
bones/20/rotation = Quaternion(-0.00533281, -0.0134463, -0.053773, 0.998448)
bones/21/position = Vector3(2.71759e-06, 23.2933, -2.32246e-06)
bones/21/rotation = Quaternion(0.0575345, 0.177667, -0.0152661, 0.982289)
bones/22/rotation = Quaternion(0.0583409, -0.000723609, -0.0160807, 0.998167)
bones/23/rotation = Quaternion(0.14003, 0.0129486, -0.0850231, 0.986405)
bones/24/position = Vector3(-0.657199, 3.8116, 0.0873121)
bones/24/rotation = Quaternion(0.0268704, 0.0215748, -0.178936, 0.983257)
bones/25/position = Vector3(-0.775601, 1.31401, 0.150397)
bones/29/rotation = Quaternion(-0.132756, -0.0907087, -0.982432, 0.0947325)
bones/30/rotation = Quaternion(-0.223709, -0.00685631, 0.0222555, 0.974378)
bones/31/rotation = Quaternion(0.729897, 0.138798, -0.181386, 0.64427)
bones/32/rotation = Quaternion(0.0349015, 0.015664, 0.0863569, 0.99553)
bones/35/rotation = Quaternion(0.0898064, 0.0713849, -0.993306, 0.0134967)
bones/36/rotation = Quaternion(-0.0427141, 0.0828177, -0.011862, 0.995578)
bones/37/rotation = Quaternion(-0.233428, 0.75126, -0.584987, -0.197258)
bones/38/rotation = Quaternion(0.252911, 0.68375, -0.399214, 0.556014)

[node name="GunTipIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="0"]
process_priority = 1
root_bone = &"mixamorig_LeftShoulder"
tip_bone = &"mixamorig_LeftHand"
override_tip_basis = false
target_node = NodePath("../../../gun_skeleton/BoneAttachment3D/gun_idle/gun/tip")

[node name="GunHandleIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="1"]
process_priority = 1
root_bone = &"mixamorig_RightShoulder"
tip_bone = &"mixamorig_RightHand"
override_tip_basis = false
target_node = NodePath("../../../gun_skeleton/BoneAttachment3D/gun_idle/gun/handle")

[node name="head" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(5.07774, -99.8127, 3.4117, 0.505855, -3.39036, -99.9412, 99.8698, 5.09202, 0.332746, -1.82598, -0.445904, -191.186)
bone_idx = 7

[node name="leftArm_2" parent="Armature/Skeleton3D" index="3"]
transform = Transform3D(-34.0688, -14.2572, 92.9304, -93.9852, 2.56803, -34.0615, 2.46972, -98.9451, -14.2746, 37.2402, 1.39936, -76.5568)
bone_idx = 16

[node name="leftArm" parent="Armature/Skeleton3D" index="4"]
transform = Transform3D(-34.4134, -15.6117, 92.5851, -93.8875, 4.74093, -34.098, 0.933856, -98.6601, -16.2889, 32.6179, 3.30089, -111.45)
bone_idx = 17

[node name="rightArm_2" parent="Armature/Skeleton3D" index="5"]
transform = Transform3D(97.1151, 10.1131, 21.5956, -21.227, -4.60222, 97.6126, 10.8655, -99.3808, -2.32277, -34.4139, 0.18621, -71.6354)
bone_idx = 26

[node name="rightArm" parent="Armature/Skeleton3D" index="6"]
transform = Transform3D(28.6083, -16.3426, -94.4165, -95.6864, 0.338257, -29.0516, 5.06718, 98.655, -15.5409, -30.6509, 0.0214742, -106.208)
bone_idx = 27

[node name="body" parent="Armature/Skeleton3D" index="7"]
transform = Transform3D(99.7738, 1.30242, -6.59554, 6.60054, -0.344946, 99.7813, 1.27683, -99.9909, -0.430126, 2.21133, -1.12909, -109.369)
bone_idx = 28

[node name="leftLEg" parent="Armature/Skeleton3D" index="8"]
transform = Transform3D(13.0639, 97.741, 16.6147, 24.7384, -19.4419, 94.9212, 96.0071, -8.29017, -26.7194, 19.4394, 9.87931, -42.0672)
bone_idx = 34

[node name="rightLeg" parent="Armature/Skeleton3D" index="9"]
transform = Transform3D(2.18575, 96.2625, -26.9955, -8.67982, 27.0827, 95.8707, 99.5986, 0.247675, 8.94738, -15.8942, -1.7151, -42.0215)
bone_idx = 40

[node name="gun_skeleton" type="Skeleton3D" parent="." index="2"]
visible = false

[node name="gun_first_person" parent="gun_skeleton" index="0" instance=ExtResource("3_865bm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.250652, 1.06319, 0.423069)
visible = false

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="gun_skeleton" index="1"]
transform = Transform3D(0.997738, 0.0130242, -0.0659554, -0.0127683, 0.999909, 0.0043009, 0.0660054, -0.0034491, 0.997813, 0.0221133, 1.09369, -0.0112905)
bone_name = "body"
bone_idx = 28
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/Skeleton3D")

[node name="gun_idle" type="Node3D" parent="gun_skeleton/BoneAttachment3D" index="0"]
transform = Transform3D(0.324093, -0.0264076, 0.945652, -0.000484832, 0.999602, 0.0280803, -0.94602, -0.00955915, 0.323953, -0.0469075, -0.070896, 0.28684)

[node name="gun" parent="gun_skeleton/BoneAttachment3D/gun_idle" index="0" instance=ExtResource("3_865bm")]
unique_name_in_owner = true

[node name="tip" type="Marker3D" parent="gun_skeleton/BoneAttachment3D/gun_idle/gun" index="1"]
transform = Transform3D(1, 1.30385e-08, 1.19209e-06, 5.43892e-07, 1, -4.47035e-08, -2.98023e-08, 5.58794e-08, 1, 0.0176065, -0.0670089, 0.712633)

[node name="handle" type="Marker3D" parent="gun_skeleton/BoneAttachment3D/gun_idle/gun" index="2"]
transform = Transform3D(1, 5.02914e-08, 1.49012e-07, 3.53903e-08, 1, -7.45058e-09, -8.9407e-08, -7.45058e-09, 1, 0.0164987, -0.100369, -0.0505382)

[node name="gun_stowed" type="Node3D" parent="gun_skeleton/BoneAttachment3D" index="1"]
transform = Transform3D(0.104209, -0.875384, 0.472058, 0.0989302, -0.463165, -0.880729, 0.989619, 0.138481, 0.0383361, -0.189505, 0.352484, -0.281979)

[node name="gun_aim_idle" type="Node3D" parent="gun_skeleton/BoneAttachment3D" index="2"]
transform = Transform3D(0.642282, 0.0532264, 0.764619, 0.0259726, 0.995502, -0.0911157, -0.766029, 0.0783812, 0.63801, -0.112425, 0.239207, 0.393362)

[node name="gun_aim_run" type="Node3D" parent="gun_skeleton/BoneAttachment3D" index="3"]
transform = Transform3D(0.94248, -0.178349, 0.282706, 0.0899221, 0.949864, 0.299455, -0.321938, -0.256809, 0.911266, -0.170172, 0.389317, 0.404395)

[node name="gun_aim_walk" type="Node3D" parent="gun_skeleton/BoneAttachment3D" index="4"]
transform = Transform3D(0.813066, -0.124569, 0.568691, 0.0230013, 0.982953, 0.182426, -0.581718, -0.135243, 0.802069, -0.196982, 0.360155, 0.453303)
